@@ -26,6 +26,8 @@ documents those changes that are of interest to users and admins.
  -- Added the authority for users with AdminLevel's defined in the SLURM db
     (Operators and Admins) and account coordinators to invoke commands that
     affect jobs, reservations, nodes, etc.
+ -- Fix for slurmd restart on completing node with no tasks to get the correct
+    state, completing, Patch from Hongjia Cao (NUDT).
 
 * Changes in SLURM 2.2.0.pre11
 ==============================
